Dark Mode: Fixup for colors set from javascript code

--- a/css/ui-dark.css
+++ b/css/ui-dark.css
@@ -2319,6 +2319,11 @@ td.right,
   border-radius: 5px;
 }
 
+.themeTemperatureTooltip {
+  font-size: 14px;
+  background-color: #000000;
+}
+
 /* MEDIA QUERIES */
 /* Bigger or equal to 1240px works without modifications. Less or equal to 1239 reduce some dimensions to fit 2 column mode */
 @media screen and (max-width: 1239px) {
